# cis6930sp25-project3

./: README.md  apptainer.def  connection.py  docker-compose.yml  main.py  pyproject.toml
output/: messages.csv
src/: classifier.py  connection.py  consumer.py  main.py  visualize.py
tests/: test_classifier.py
tools/: publish_live.py
