[project]
name = "cis6930sp25-project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pika>=1.3.0",    # RabbitMQ client :contentReference[oaicite:6]{index=6}
  "loguru>=0.7.0",  # Structured logging :contentReference[oaicite:7]{index=7}
  "pandas>=1.5.0",
  "matplotlib>=3.6.0",
  "wordfreq>=3.0.0",
  "pytest>=8.0.0",  # Testing framework :contentReference[oaicite:8]{index=8}
  # Add mapping libraries like folium or geopandas as desired
]
